fix: webchat on firefox

--- a/botfront/client/main.less
+++ b/botfront/client/main.less
@@ -212,18 +212,3 @@ p.overflow {
 .ui.menu.secondary.pointing.hoverable .item:hover {
     border-color: #b0b5bb;
 }
-
-// Chat widget
-
-.widget-embedded {
-    .header-and-loading {
-        height: 30px;
-    }
-    .messages-container {
-        height: 100vh;
-        max-height: ~"calc(100vh - 100px)"; /* 100px: 2 * (sender height + padding) */
-        .header-and-loading + & {
-            max-height: ~"calc(100vh - 130px)";
-        }
-    }
-}
