--- a/botfront/imports/ui/layouts/project.import.less
+++ b/botfront/imports/ui/layouts/project.import.less
@@ -216,6 +216,19 @@
 
     .widget-embedded {
         position: unset;
+        // Chat widget
+
+        .header-and-loading {
+            height: 30px;
+        }
+        
+        .messages-container {
+            height: 100vh;
+            max-height: ~"calc(100vh - 100px)"; /* 100px: 2 * (sender height + padding) */
+            .header-and-loading + & {
+                max-height: ~"calc(100vh - 130px)";
+            }
+        }
     }
 
     .ui.active.visible.item.dropdown .menu.transition.visible {
